--- a/src/client/styles/index.css
+++ b/src/client/styles/index.css
@@ -73,7 +73,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
-.container {
+
+/*HEADER
+
+/*.container {
   width: 85%;
   margin: 0 auto;
   height: 100%;
@@ -142,6 +145,6 @@ h1, h2, h3, h4, h5, h6 {
 .header__burger > span::after {
   content: '';
   top: 9px;
-}
+}*/
 
 
