--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -1,7 +1,97 @@
 @import '~normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&display=swap');
 
+* {
+    /*margin: 0;
+    padding: 0;*/
+    box-sizing: border-box;
+}
 
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
+html, body {
+    height: 100%;
+}
+
+body {
+    font-weight: 400;
+}
+
+img {
+    max-width: 100%;
+}
+
+a {
+    text-decoration: none;
+}
+
+.header {
+    width: 100%;
+    background-color: rgb(40, 44, 52);
+
+    &-container {
+        width: 100%;
+        max-width: 1350px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &-logotext {
+        font-family: 'Merriweather Sans', sans-serif;
+        font-weight: 700;
+        font-size: 22px;
+    }
+
+    &-nav {
+        ul {
+            display: flex;
+            list-style-type: none;
+        }
+
+        li {
+            margin-left: 35px;
+        }
+    }
+
+    &-burger {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        z-index: 1;
+
+        .burger-line::after,
+        .burger-line::before,
+        .burger-line {
+            display: block;
+            position: relative;
+            width: 100%;
+            height: 2px;
+            background-color: #616161;
+        }
+
+        .burger-line::before {
+            content: '';
+            top: -10px;
+          }
+          
+          .burger-line::after {
+            content: '';
+            top: 9px;
+          }
+          
+    }
+}
 
 
 
