--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -1,5 +1,11 @@
 @import '~normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;700&family=Merriweather:wght@400;700&display=swap');
+
+
+$font-merriweather-sans: 'Merriweather', serif;
+$font-merriweather-sans-serif: 'Merriweather Sans', sans-serif;
 
 * {
     /*margin: 0;
@@ -28,13 +34,35 @@ a {
     text-decoration: none;
 }
 
+link {
+    text-decoration: none;
+}
+
+link:visited {
+    text-decoration: none;
+    
+}
+
+a:active {
+    color: green;
+}
+
+
+
+a:visited {
+    color: black;
+}
 .header {
     width: 100%;
-    background-color: rgb(40, 44, 52);
+    height: 75px;
+    //background-color: rgb(40, 44, 52);
+    font-size: 22px;
+    font-family: $font-merriweather-sans-serif;
 
     &-container {
         width: 100%;
-        max-width: 1350px;
+        height: 100%;
+        max-width: 1450px;
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
@@ -42,31 +70,38 @@ a {
     }
 
     &-logotext {
-        font-family: 'Merriweather Sans', sans-serif;
+        font-family: $font-merriweather-sans-serif;
         font-weight: 700;
-        font-size: 22px;
+        font-size: 28px;
+        letter-spacing: 2px;
     }
 
     &-nav {
+
+        letter-spacing: 1.25px;
         ul {
             display: flex;
             list-style-type: none;
         }
 
         li {
-            margin-left: 35px;
+            margin-right: 35px;
         }
     }
 
     &-burger {
+        font-family: $font-merriweather-sans-serif;
+        height: 40px;
+        padding: 15px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center;
-        width: 40px;
-        height: 40px;
+        background-color: white;
+        border: 1.5px solid black;
+        //width: 40px;
         cursor: pointer;
         z-index: 1;
 
