--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -77,7 +77,6 @@ a:visited {
     }
 
     &-nav {
-
         letter-spacing: 1.25px;
         ul {
             display: flex;
@@ -101,7 +100,6 @@ a:visited {
         align-items: center;
         background-color: white;
         border: 1.5px solid black;
-        //width: 40px;
         cursor: pointer;
         z-index: 1;
 
@@ -124,9 +122,18 @@ a:visited {
             content: '';
             top: 9px;
           }
-          
     }
 }
 
+.main {
+    width: 100%;
+
+    &-container {
+        width: 100%;
+        height: 100%;
+        max-width: 1450px;
+        margin: 0 auto;
+    }
+}
 
 
