--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -8,8 +8,8 @@ $font-merriweather-sans: 'Merriweather', serif;
 $font-merriweather-sans-serif: 'Merriweather Sans', sans-serif;
 
 * {
-    /*margin: 0;
-    padding: 0;*/
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -32,6 +32,13 @@ img {
 
 a {
     text-decoration: none;
+    color: black;
+    &:active {
+        color: green;
+    }
+    &:visited {
+        color: black;
+    }
 }
 
 link {
@@ -43,18 +50,28 @@ link:visited {
     
 }
 
-a:active {
-    color: green;
+button {
+    border: none;
+}
+
+button:active, button:focus {
+            outline: none;
+        }
+
+
+
+/*a:active {
+    
 }
 
 
 
 a:visited {
     color: black;
-}
+}*/
 .header {
     width: 100%;
-    height: 75px;
+    height: 100px;
     //background-color: rgb(40, 44, 52);
     font-size: 22px;
     font-family: $font-merriweather-sans-serif;
@@ -128,12 +145,270 @@ a:visited {
 .main {
     width: 100%;
 
+    /*&-container {
+        width: 100%;
+        //height: 100%;
+        max-width: 1450px;
+        margin: 0 auto;
+    }*/
+}
+
+.hero {
+    width: 100%;
+    background-image: url('../../public/img/pexels-photo-356056.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
     &-container {
         width: 100%;
-        height: 100%;
+        background-color: rgba(18, 13, 15, 0.75);
+        /*max-width: 1450px;
+        margin: 0 auto;*/
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &-text {
+        margin: 190px 108px auto;
+        text-align: center;
+        p:nth-child(1) {
+            font-family: $font-merriweather-sans-serif;
+            font-size: 80px;
+        }
+        p:last-child {
+            font-family: $font-merriweather-sans-serif;
+            font-size: 29px;
+            margin-top: 28px;
+        }
+    }
+
+    &-buttons {
+        max-width: 1450px;
+        width: 100%;
+        margin-top: 110px;
+        margin-bottom: 180px;
+        display: flex;
+        justify-content: center;
+                
+        button {
+            width: 15%;
+            height: 70px;
+            cursor: pointer;
+            color: white;
+            font-size: 20px;
+            font-family: $font-merriweather-sans-serif;
+        }
+
+        button:nth-child(1) {
+            margin-right: 25px;
+            background-color: rgba($color: #000000, $alpha: 0.25);
+            border: 3px solid white;
+        }
+
+        button:nth-child(2) {
+            background-color: #00897b;
+        }
+    }
+}
+
+.about {
+    width: 100%;
+    padding-top: 130px;
+    padding-bottom: 100px;
+    text-align: center;
+    &-container {
         max-width: 1450px;
         margin: 0 auto;
     }
+
+    &-text {
+        margin-bottom: 100px;
+        h2 {
+            font-family: $font-merriweather-sans-serif;
+            font-size: 40px;
+            letter-spacing: 0.75px;
+        }
+        p {
+            width: 60%;
+            margin: 40px auto 0 auto;
+            font-family: $font-merriweather-sans;
+            font-size: 20px;
+            line-height: 30px;
+            color: #919191;
+        }
+    }
+
+    &-button {
+        font-family: $font-merriweather-sans-serif;
+        font-size: 20px;
+        
+        button {
+            width: 15%;
+            height: 70px;
+            //border: 3px solid black;
+            //background-color: white;       
+            //background-color: #00897b;
+            background-color: #f0f1f1;
+            cursor: pointer;
+        }
+
+        a {
+            color: white;
+        }
+    }
 }
+
+.portfolio {
+    width: 100%;
+    background-color: #f0f1f1;
+    padding-top: 130px;
+    padding-bottom: 100px;
+    text-align: center;
+    &-container {
+        max-width: 1450px;
+        margin: 0 auto;
+    }
+
+    &-text {
+        margin-bottom: 100px;
+        h2 {
+            font-family: $font-merriweather-sans-serif;
+            font-size: 40px;
+            letter-spacing: 0.75px;
+        }
+        p {
+            width: 60%;
+            margin: 40px auto 0 auto;
+            font-family: $font-merriweather-sans;
+            font-size: 20px;
+            line-height: 30px;
+            color: black;
+        }
+    }
+
+    &-button {
+        font-family: $font-merriweather-sans-serif;
+        font-size: 20px;
+        
+        button {
+            width: 15%;
+            height: 70px;
+            //border: 3px solid black;
+            //background-color: white;
+            color: white;       
+            background-color: #959595;
+            cursor: pointer;
+        }
+
+        a {
+            color: white;
+        }
+    }
+}
+
+.contact {
+    width: 100%;
+    padding-top: 130px;
+    padding-bottom: 100px;
+    text-align: center;
+    &-container {
+        max-width: 1450px;
+        margin: 0 auto;
+    }
+
+    &-text {
+        margin-bottom: 100px;
+        h2 {
+            font-family: $font-merriweather-sans-serif;
+            font-size: 40px;
+            letter-spacing: 0.75px;
+        }
+        p {
+            width: 60%;
+            margin: 40px auto 0 auto;
+            font-family: $font-merriweather-sans;
+            font-size: 20px;
+            line-height: 30px;
+            color: #919191;
+        }
+    }
+
+    &-button {
+        font-family: $font-merriweather-sans-serif;
+        font-size: 20px;
+        
+        button {
+            width: 15%;
+            height: 70px;
+            //border: 3px solid black;
+            //background-color: white;       
+            //background-color: #00897b;
+            background-color: #f0f1f1;
+            cursor: pointer;
+        }
+
+        a {
+            color: white;
+        }
+    }
+}
+
+.footer {
+    width: 100%;
+    background-color: #d1d3d3;
+    font-family: $font-merriweather-sans;
+    font-size: 18px;
+    text-align: center;
+    &-container {
+        width: 100%;
+        max-width: 1450px;
+        margin: 0 auto;
+    }
+
+    &-social {
+        .social-list {
+            display: flex;
+            justify-content: center;
+        }
+        .social-link {
+            list-style-type: none;
+            width: 20px;
+            height: 20px;
+            
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        .social-link-vk {
+            background-image: url('../../public/img/icons/vk.svg');
+        }
+
+        .social-link-inst {
+            background-image: url('../../public/img/icons/instagram.svg');
+        }
+
+        .social-link-fac {
+            background-image: url('../../public/img/icons/facebook.svg');
+        }
+
+        .social-link-tw {
+            background-image: url('../../public/img/icons/twitter.svg');
+        }
+
+        .social-link-in {
+            background-image: url('../../public/img/icons/instagram.svg');
+        }
+
+
+    }
+
+
+}
+
+
+
 
 
