--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -590,8 +590,27 @@ a:visited {
 
     .employee {
         width: 28%;
-        img {
-            object-fit: cover;
+        font-family: $font-merriweather-sans-serif;
+        &-photo {
+            height: 320px;
+            margin-bottom: 40px;
+            img {
+                object-fit: cover;
+                height: 100%;
+                border-radius: 10px;
+            }
+        }
+        
+        &-name {
+            margin-bottom: 20px;
+            color: #3f3f3f;
+            font-size: 26px;
+        }
+
+        &-position {
+            margin-bottom: 30px;
+            color: #212121;
+            font-size: 21px;
         }
         
     }
