add some changes

--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -617,6 +617,16 @@ a:visited {
 
 }
 
+//TODO
+
+.todo {
+    &-container {
+        width: 100%;
+        max-width: 1450px;
+        margin:  0 auto;
+    }
+}
+
 
 
 
