--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -626,14 +626,81 @@ a:visited {
     &-container {
         width: 100%;
         max-width: 1450px;
-        margin:  0 auto;
+        margin:  0 auto 50px auto;
         text-align: center;
+        font-family: $font-merriweather-sans-serif;
     }
 
     &-input { 
-        width: 80%;
-        margin: 0 auto;
+        margin-top: 40px;
+        input {
+            width: 300px;
+            height: 30px;
+            margin-right: 10px;
+        }
+
+        button {
+            height: 30px;
+            border: 1px solid #000;
+            background-color: #fff;
+            padding: 0 5px 0 5px;
+            font-family:  $font-merriweather-sans-serif;
+        }
     }
+
+    &-settings {
+        max-width: 700px;
+        margin: 30px auto 0px auto;
+        padding-bottom: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid #3b3a3a;
+        
+    }
+
+    &-sortingBy {
+        display: flex;
+        align-items: center;
+        p {
+            margin-right: 5px;
+        }
+    }
+
+    &-filters {
+        input {
+            padding: 4px 5px;
+            border: none;
+            background-color: #fff;
+        }
+        input:focus {
+            outline: none;
+        }
+        input.currentFilter {
+            border: 1px solid black;
+        }
+    }
+
+    &-tasks {
+        max-width: 600px;
+        margin: 30px auto 0px auto;
+        li {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+            border: 2px solid #3f3f3f;
+            border-radius: 5px;
+            padding: 10px;
+            div {
+                display: flex;
+                i {
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+
+    
 }
 
 
