--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -21,6 +21,18 @@ html, body {
 
 body {
     font-weight: 400;
+    min-height: 100vh;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+}
+
+main {
+    flex-grow: 1;
 }
 
 img {
@@ -75,6 +87,7 @@ a:visited {
     //background-color: rgb(40, 44, 52);
     font-size: 22px;
     font-family: $font-merriweather-sans-serif;
+    border-bottom: 1px solid rgb(46, 45, 45);
 
     &-container {
         width: 100%;
@@ -151,6 +164,85 @@ a:visited {
         max-width: 1450px;
         margin: 0 auto;
     }*/
+}
+
+
+//AUTH PAGE
+.main-auth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f2f5;
+}
+
+.auth-header {
+    width: 35%;
+    padding-top: 60px;
+    h1 {
+        font-size: 40px;
+    }
+    p{
+        font-size: 20px;
+    }
+}
+
+.auth-card {
+    width: 60%;
+    font-family: $font-merriweather-sans-serif;
+    &-container {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.logIn-card {
+    width: 50%;
+    padding: 10px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 
+    0 8px 16px rgba(0, 0, 0 , 0.1);
+    .input-field {
+        padding: 6px 0;
+        input {
+            width: 100%;
+            border: 1px solid #dddfe2;
+            border-radius: 5px;
+            padding: 16px 14px;
+        }
+    }
+    .logIn-btn {
+        padding: 10px 0;
+        button {
+            width: 100%;
+        }
+
+        p {
+            margin-top: 10px;
+            text-align: center;
+            padding-bottom: 16px;
+            border-bottom: 1px solid #dadde1;
+        }
+    }
+
+    button {
+        padding: 10px;
+        background-color: #fff;
+        border: 1px solid #000;
+        cursor: pointer;
+        font-size: 18px;
+    }
+
+    .signUp-link {
+        padding: 10px 0;
+        
+        button {
+            margin: 0 auto;
+            width: 100%;
+        }
+    }
+    
 }
 
 .hero {
@@ -363,6 +455,7 @@ a:visited {
     font-family: $font-merriweather-sans;
     font-size: 18px;
     text-align: center;
+    flex-shrink: 0;
     &-container {
         width: 100%;
         max-width: 1450px;
@@ -698,9 +791,7 @@ a:visited {
                 }
             }
         }
-    }
-
-    
+    }   
 }
 
 
