--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -69,7 +69,9 @@ button {
 button:active, button:focus {
             outline: none;
         }
-
+input:focus {
+            outline: none;
+        }
 
 
 /*a:active {
@@ -242,7 +244,62 @@ a:visited {
             width: 100%;
         }
     }
+}
+
+.signUp-card {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, .8);
+    padding: 20px;
     
+
+
+    &-container {
+        width: 430px;
+        background-color: #fff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1),
+    0 8px 16px rgba(0, 0, 0 , 0.1);
+        
+    }
+
+    &-header {
+        position: relative;
+        padding: 16px;
+        p {
+            color: #606770;
+            font-size: 15px;
+        }
+        .close-btn {
+            position: absolute;
+            right: 16px;
+            top: 16px;
+            cursor: pointer;
+        }
+        i.fas {
+            color: #5f5f5f;
+        }
+    }
+
+    &-fields {
+        padding: 16px;
+        border-top: 1px solid #dadde1;
+        input {
+            padding: 11px;
+            border-radius: 5px;
+            border: 1px solid rgb(118, 118, 118);
+            background-color: #f5f6f7;
+            font-size: 14px;
+            color: #1c1e21;
+        }
+    }
+
+
 }
 
 .hero {
