--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -64,6 +64,7 @@ link:visited {
 
 button {
     border: none;
+    cursor: pointer;
 }
 
 button:active, button:focus {
@@ -258,14 +259,11 @@ a:visited {
     background-color: rgba(255, 255, 255, .8);
     padding: 20px;
     
-
-
     &-container {
         width: 430px;
         background-color: #fff;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1),
-    0 8px 16px rgba(0, 0, 0 , 0.1);
-        
+                    0 8px 16px rgba(0, 0, 0 , 0.1);
     }
 
     &-header {
@@ -289,6 +287,15 @@ a:visited {
     &-fields {
         padding: 16px;
         border-top: 1px solid #dadde1;
+        .signUp-card-fields-container {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 10px;
+            max-width: 97.5%;
+            margin-bottom: 20px;
+        }
+        
         input {
             padding: 11px;
             border-radius: 5px;
@@ -297,9 +304,37 @@ a:visited {
             font-size: 14px;
             color: #1c1e21;
         }
+
+        input.first-name {
+            grid-column: 1 /2;
+            grid-row: 1 / 2;
+        }
+
+        input.second-name {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+        }
+
+        input.email {
+            grid-column: 1 / 3;
+            grid-row: 2 / 3;
+        }
+
+        input.password {
+            grid-column: 1 / 3;
+            grid-row: 3 / 4;
+        }
+
+        button {
+            width: 50%;
+            margin-left: 25%;
+            padding: 8px;
+            border: 1px solid #000;
+            border-radius: 5px;
+            background-color: #fff;
+        }
+
     }
-
-
 }
 
 .hero {
