--- a/src/client/styles/scss.scss
+++ b/src/client/styles/scss.scss
@@ -59,7 +59,6 @@ link {
 
 link:visited {
     text-decoration: none;
-    
 }
 
 button {
@@ -68,25 +67,17 @@ button {
 }
 
 button:active, button:focus {
-            outline: none;
-        }
+    outline: none;
+}
 input:focus {
-            outline: none;
-        }
-
-
-/*a:active {
-    
+    outline: none;
 }
 
-
-
-a:visited {
-    color: black;
-}*/
 .header {
     width: 100%;
     height: 100px;
+    position: fixed;
+    top: 0;
     background-color: rgb(221, 215, 215);
     font-size: 22px;
     border-bottom: 1px solid rgb(46, 45, 45);
@@ -117,6 +108,10 @@ a:visited {
         li {
             margin-right: 35px;
         }
+    }
+    
+    &-menu {
+        position: relative;
     }
 
     &-burger {
@@ -153,6 +148,43 @@ a:visited {
             top: 9px;
           }
     }
+
+    &-submenu {
+        position: absolute;
+        top: 50px;
+        right: 0;
+        z-index: 10;
+        border-radius: 5px;
+        background-color: #fff;
+        padding: 10px;
+        max-width: 360px;
+        color: #1c1e21;
+
+        .userName {
+
+
+        }
+
+        .logout {
+            button {
+                background-color: inherit;
+            }
+        }
+    }
+
+    &-submenu> div {
+        padding: 5px;
+        border-radius: 5px;
+        
+    }
+
+    &-submenu> div:hover {
+        background-color: #ccd0d5;
+    }
+}
+
+.main {
+    margin-top: 100px;
 }
 
 //AUTH PAGE
@@ -376,7 +408,7 @@ a:visited {
     }
 }
 
-.about {
+.about, .portfolio, .contact {
     width: 100%;
     padding-top: 100px;
     padding-bottom: 50px;
@@ -397,7 +429,6 @@ a:visited {
             margin: 40px auto 0 auto;
             font-size: 18px;
             line-height: 30px;
-            color: #919191;
         }
     }
 
@@ -407,8 +438,22 @@ a:visited {
         button {
             width: 15%;
             height: 70px;
-            background-color: #f0f1f1;
             cursor: pointer;
+        }
+    }
+
+}
+
+.about {
+    &-text {
+        p {
+            color: #919191;
+        }
+    }
+
+    &-button {
+        button {
+            background-color: #f0f1f1;
         }
 
         a {
@@ -418,41 +463,18 @@ a:visited {
 }
 
 .portfolio {
-    width: 100%;
     background-color: #f0f1f1;
-    padding-top: 100px;
-    padding-bottom: 50px;
-    text-align: center;
-    &-container {
-        max-width: 1450px;
-        margin: 0 auto;
-    }
 
     &-text {
-        margin-bottom: 80px;
-        h2 {
-            font-size: 38px;
-            letter-spacing: 0.75px;
-        }
         p {
-            width: 60%;
-            margin: 40px auto 0 auto;
-            font-family: $font-merriweather-sans;
-            font-size: 18px;
-            line-height: 30px;
             color: black;
         }
     }
 
     &-button {
-        font-size: 20px;
-        
         button {
-            width: 15%;
-            height: 70px;
             color: white;       
             background-color: #959595;
-            cursor: pointer;
         }
 
         a {
@@ -462,39 +484,15 @@ a:visited {
 }
 
 .contact {
-    width: 100%;
-    padding-top: 100px;
-    padding-bottom: 50px;
-    text-align: center;
-    &-container {
-        max-width: 1450px;
-        margin: 0 auto;
-    }
-
     &-text {
-        margin-bottom: 80px;
-        h2 {
-            font-size: 38px;
-            letter-spacing: 0.75px;
-        }
         p {
-            width: 60%;
-            margin: 40px auto 0 auto;
-            font-family: $font-merriweather-sans;
-            font-size: 18px;
-            line-height: 30px;
             color: #919191;
         }
     }
 
-    &-button {
-        font-size: 20px;
-        
+    &-button {   
         button {
-            width: 15%;
-            height: 70px;
             background-color: #f0f1f1;
-            cursor: pointer;
         }
 
         a {
@@ -570,7 +568,7 @@ a:visited {
 }
 
 .description-header {
-    margin-bottom: 130px;
+    margin-bottom: 100px;
     line-height: 1.5;
     text-align: center;
     h2 {
@@ -610,12 +608,10 @@ a:visited {
 }
 
 .about-pricing {
-    width: 100%;
     background-color: #f0f1f1;
     text-align: center;
     color: #212121;
     &-container {
-        width: 100%;
         max-width: 1450px;
         margin: 0 auto;
         padding-top: 100px;
@@ -623,7 +619,7 @@ a:visited {
     }
 
     .pricing-header {
-        margin-bottom: 120px;
+        margin-bottom: 100px;
         h2 {
             font-size: 36px;
         }
@@ -706,7 +702,6 @@ a:visited {
 }
 
 .about-team {
-    width: 100%;
     text-align: center;
     color: #212121;
     &-container {
@@ -758,9 +753,7 @@ a:visited {
             color: #212121;
             font-size: 21px;
         }
-        
     }
-
 }
 
 //TODO
